2009-07-21  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strstr.c: Minor cleanups.  Remove
	unnecesary variables.  Comment fixes.

2009-07-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strstr.c [USE_AS_STRCASESTR] (STRSTR_SSE42):
	Use NONASCII_CASE information provided by the locale to determine
	whether optimized string load function can be used.  Minor cleanups.

2009-07-20  H.J. Lu  <hongjiu.lu@intel.com>

	* string/strcasestr.c (STRCASESTR): New macro.
	(__strcasestr): Renamed to ..
	(STRCASESTR): ...this.
	* string/strstr.c (STRSTR): New macro.
	(strstr): Renamed to ..
	(STRSTR): ...this.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strstr-c strcasestr-c
	(CFLAGS-strstr.c): New.
	(CFLAGS-strcasestr.c): Likewise.
	* sysdeps/x86_64/multiarch/strcasestr-c.c: New file.
	* sysdeps/x86_64/multiarch/strcasestr.c: New file.
	* sysdeps/x86_64/multiarch/strstr-c.c: New file.
	* sysdeps/x86_64/multiarch/strstr.c: New file.

2009-07-20  Ulrich Drepper  <drepper@redhat.com>

	* locale/localeinfo.h (LIMAGIC): Update value for LC_CTYPE.
	* locale/langinfo.h: Define _NL_CTYPE_NONASCII_CASE.
	* locale/C-ctype.c (_nl_C_LC_CTYPE): Add initializer for
	_NL_CTYPE_NONASCII_CASE.
	* locale/programs/ld-ctype.c (locale_ctype_t): Add nonascii_case
	field.
	(ctype_finish): Check whether there are any 8-bit characters outside
	the range ASCII has or whether the mapping isn't the same as for
	ASCII (±0x20).  Set nonascii_case appropriately.
	(ctype_output): Add output handler for nonascii_case.

2009-07-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/sysdep.h: Define cfi_personality, cfi_lsda,
	CFI_PERSONALITY, CFI_LSDA, and DW_EH_PE_* constants.

2009-07-16  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10360]
	* resolv/res-mkquery.c (__res_nopt): If anslen is > 0xffff store
	0xffff in the EDNS0 record.

2009-07-16  Ulrich Drepper  <drepper@redhat.com>
